<resources>
    <string name="action_settings">Settings</string>

    <!--测试账号-->
    <string name="test_userid">B27039502337407C</string>
    <string name="test_roomid">F841155428ECD8C19C33DC5901307461</string>
    <string name="test_username">youyou</string>
    <string name="test_passwd">111</string>

    <!--导航栏-->
    <string name="pilot_push">我要直播</string>
    <string name="pilot_live">观看直播</string>
    <string name="pilot_replay">观看回放</string>
    <string name="title_activity_login">Sign in</string>
    <string name="pilot_version">v1.0</string>

    <!--登录页-->
    <string name="login_uid_hint">16位账号ID</string>
    <string name="login_roomid_hint">32位直播间ID</string>
    <string name="login_name_hint">聊天中显示的名字</string>
    <string name="login_t_password_hint">讲师密码</string>
    <string name="login_s_password_hint">观看密码</string>
    <string name="login_liveid_hint">16位直播ID</string>
    <string name="login_recordid_hint">16位回放ID</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="camera">摄像头</string>
    <string name="resolution">分辨率</string>
    <string name="bitrate">码率</string>
    <string name="fps">帧率</string>
    <string name="server">服务器</string>

    <string name="setting_tip">直播设置</string>
    <string name="setting_orientation">横屏模式</string>
    <string name="setting_beauty">美颜</string>

    <string name="setting_camera_default">前置摄像头</string>
    <string name="setting_resolution_default">标清</string>
    <string name="setting_bitrate_default">450</string>
    <string name="setting_fps_default">20</string>
    <string name="setting_server_test_speed">测速</string>
    <string name="setting_start">开始直播</string>

    <string name="select_camera_tip">选择摄像头</string>
    <string name="select_resolution_tip">选择分辨率</string>
    <string name="select_server_tip">选择服务器</string>
    <string name="seek_fps_tip">拖动滑块调整帧率</string>
    <string name="seek_bitrate_tip">拖动滑块调整码率</string>

    <string name="push_pusher_tip">主播：</string>
    <string name="push_online_tip">在线人数：</string>
    <string name="push_send">发送</string>
    <string name="push_input_hint">请输入文字</string>
    <string name="push_private_list_tip">私聊列表</string>

    <string name="choose_dialog_cancel_txt">取消</string>
    <string name="choose_dialog_ok_txt">确认</string>

    <string name="scan_text">将二维码置于框内, 即可自动扫描</string>

    <!--问卷-->
    <string name="questionnaire_title">问卷调查</string>
    <string name="questionnaire_submit">提交</string>

    <!--连麦-->
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    
</resources>
