<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:item="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <TextView
            style="@style/TopTipStyle"
            android:text="@string/setting_tip"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorItemLine"/>

        <RelativeLayout
            style="@style/ItemSimpleBgStyle">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_orientation"/>

            <com.bokecc.dwlivedemo_new.view.ToggleButton
                android:id="@+id/id_item_orientation"
                style="@style/ItemSimpleIconStyle"
                android:checked="false"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginEnd="@dimen/item_margin_end"
            android:layout_marginStart="@dimen/item_margin_start"
            android:background="@color/colorItemLine"/>

        <RelativeLayout
            style="@style/ItemSimpleBgStyle">

            <TextView
                style="@style/ItemSimpleTipStyle"
                android:text="@string/setting_beauty"/>

            <com.bokecc.dwlivedemo_new.view.ToggleButton
                android:id="@+id/id_item_beauty"
                style="@style/ItemSimpleIconStyle"
                android:checked="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginEnd="@dimen/item_margin_end"
            android:layout_marginStart="@dimen/item_margin_start"
            android:background="@color/colorItemLine"/>

        <com.bokecc.dwlivedemo_new.view.ItemLayout
            android:id="@+id/id_setting_camera"
            style="@style/ItemStylePaddingLine"
            item:tipTxt="@string/camera"
            item:valueTxt="@string/setting_camera_default"/>

        <com.bokecc.dwlivedemo_new.view.ItemLayout
            android:id="@+id/id_setting_resolution"
            style="@style/ItemStylePaddingLine"
            item:tipTxt="@string/resolution"
            item:valueTxt="@string/setting_resolution_default"/>

        <com.bokecc.dwlivedemo_new.view.ItemLayout
            android:id="@+id/id_setting_bitrate"
            style="@style/ItemStylePaddingLine"
            item:tipTxt="@string/bitrate"
            item:valueTxt="@string/setting_bitrate_default"/>

        <com.bokecc.dwlivedemo_new.view.ItemLayout
            android:id="@+id/id_setting_fps"
            style="@style/ItemStylePaddingLine"
            item:tipTxt="@string/fps"
            item:valueTxt="@string/setting_fps_default"/>

        <com.bokecc.dwlivedemo_new.view.ItemLayout
            android:id="@+id/id_setting_server"
            style="@style/ItemStyle"
            item:tipTxt="@string/server"/>

        <Button
            android:id="@+id/id_setting_start_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_btn_selector"
            android:text="@string/setting_start"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

    </LinearLayout>
</ScrollView>
