<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pilot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/default_bg"
    tools:context="com.bokecc.dwlivedemo_new.activity.PilotActivity">

    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/tv_center_in_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.bokecc.dwlivedemo_new.view.PilotButton
        android:id="@+id/btn_start_push"
        android:text="@string/pilot_push"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_center_in_parent"
        android:drawablePadding="-75dp"
        android:drawableRight="@mipmap/pilot_button_go_icon"
        android:paddingRight="75dp"
        android:visibility="invisible"
        style="@style/pilotButtonTheme" />

    <com.bokecc.dwlivedemo_new.view.PilotButton
        android:drawablePadding="-75dp"
        android:drawableRight="@mipmap/pilot_button_go_icon"
        android:paddingRight="75dp"
        android:layout_below="@id/btn_start_push"
        android:layout_marginTop="24dp"
        android:id="@+id/btn_start_live"
        android:text="@string/pilot_live"
        style="@style/pilotButtonTheme" />

    <com.bokecc.dwlivedemo_new.view.PilotButton
        android:drawablePadding="-75dp"
        android:drawableRight="@mipmap/pilot_button_go_icon"
        android:paddingRight="75dp"
        android:layout_below="@id/btn_start_live"
        android:layout_marginTop="24dp"
        android:id="@+id/btn_start_replay"
        android:text="@string/pilot_replay"
        style="@style/pilotButtonTheme" />

    <TextView
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pilot_version"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:textColor="#AAAAAA"
        android:layout_height="wrap_content" />
</RelativeLayout>
